# quantonion

./: .env.example  .gitignore  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README.md  ROADMAP.md  TODO.md  agent.py  app.py  architecture.yaml  pyproject.toml  render.yaml  requirements.dashboard.txt  requirements.txt  start.sh  test_ml.py  test_ml_debug.py
.co/: config.toml  host.yaml
.co/evals/: provide_a_comprehensive_research_summary_use_your.yaml
.co/evals/provide_a_comprehensive_research_summary_use_your/: run_1.yaml
.streamlit/: architecture.md
agents/: __init__.py  live_tools.py  research_agent.py  sentiment_tools.py  tools.py
backtesting/: __init__.py  engine.py  metrics.py
core/: __init__.py  data_loader.py  features.py  hmm_model.py  ml.py  plotting.py  portfolio.py
docs/: architecture.md
prompts/: agent_system.txt  system.txt
strategies/: __init__.py  base.py  bollinger.py  buy_hold.py  ema_crossover.py  regime_filter.py  rsi_reversion.py  sma_crossover.py
tests/: test_backtest.py  test_features.py  test_metrics.py  test_strategies.py
