[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "quantonion"
version = "1.0.0"
description = "Open-source agentic quant research and backtesting platform"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = [
    "quantitative finance", "backtesting", "regime detection",
    "hidden markov model", "streamlit", "connectonion", "machine learning",
    "trading strategies", "open source"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.40",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "hmmlearn>=0.3.0",
    "connectonion>=0.8.9",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
dashboard = ["streamlit>=1.35.0", "plotly>=5.18.0"]

[project.urls]
Homepage = "https://github.com/Jaideepgarlyal15/quantonion"
Repository = "https://github.com/Jaideepgarlyal15/quantonion"
Issues = "https://github.com/Jaideepgarlyal15/quantonion/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
